Adicionando um root para padrão

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Edlan Carvalho: Designer e Desenvolvedor Front End</title>
+    <style href="./style/style.css"></style>
 </head>
 
 <body>
