--- a/index.html
+++ b/index.html
@@ -5,37 +5,46 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Edlan Carvalho: Designer e Desenvolvedor Front End</title>
-    <style href="./style/style.css"></style>
+    <link rel="stylesheet" href="./styles/style.css">
 </head>
 
 <body>
     <header>
         <nav>
-            <a href="">Edlan Carvalho</a>
-            <a href="">Projetos</a>
-            <a href="">Sobre</a>
-            <a href="">Contato</a>
+            <div>
+                <a href="">Edlan Carvalho</a>
+            </div>
+            <div class="nav_links">
+                <a class="nav_links" href="">Projetos</a>
+                <a class="nav_links" href="">Sobre</a>
+                <a class="nav_links" href="">Contato</a>
+            </div>
         </nav>
     </header>
     <main>
-        <section>
-            <h1>Designer e Desenvolvedor Front-End</h1>
-            <a href="">Ver Portifólio</a>
-            <a href="">Contato</a>
+        <section class="banner">
+            <div>
+                <h1>Designer e Desenvolvedor Front-End</h1>
+                <div class="banner_buttons">
+                    <a href="">Ver Portifólio</a>
+                    <a href="">Contato</a>
+                </div>
+            </div>
+            <img src="" alt="Foto do Edlan">
         </section>
-        <section>
+        <section class="about">
             <h2>SOBRE</h2>
             <p>Graduado em Design pela Universidade Federal do Maranhão, com certificação em Desenvolvedor Web pelo
                 SENAC e Desenvolvedor Front-End pelo Programa Trilhas do Governo do Maranhão. Desde 2021, atua como
                 designer freelancer e, a partir de 2024, iniciou sua trajetória na área de desenvolvimento web.</p>
         </section>
-        <section>
+        <section class="projects">
             <h2>PROJETOS</h2>
             <button>Todos</button>
             <button>Design</button>
             <button>Dev</button>
         </section>
-        <section>
+        <section class="hability">
             <h2>HABILIDADES</h2>
             <div>
                 <img src="" alt="">
@@ -58,7 +67,7 @@
                 <legend></legend>
             </div>
         </section>
-        <section>
+        <section class="contact">
             <h2>MANDE UMA MENSAGEM</h2>
             <form action="">
                 <label for="">Nome</label>
